--- a/local/pressure-washing-askern.html
+++ b/local/pressure-washing-askern.html
@@ -150,6 +150,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2>Patio Pressure Washing Services in Askern, Doncaster</h2>
 <p>Your patio should be a clean, inviting space for relaxing and entertaining, but over time moss, algae, and dirt can take over. Our professional patio pressure washing service in Askern, Doncaster restores your outdoor area to its original condition. Using specialist equipment, we remove years of build-up from paving slabs, flagstones, and block paving, leaving a clean, even surface. Pressure washing not only enhances the appearance but also reduces slipping hazards caused by moss and algae. We carefully select pressure levels and cleaning solutions suitable for your specific patio material to prevent damage while delivering deep, long-lasting results. Enjoy your garden again with a safe, bright, and refreshed patio that’s ready for summer gatherings, family barbecues, or quiet evenings outdoors.</p>
 <p>Regular patio cleaning prolongs the life of your outdoor surfaces. Our Askern-based team ensures dirt, algae, and moss are completely removed, restoring the patio’s colour and texture. We treat every area with precision, leaving no staining or damage behind.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <p>Bring your patio back to life with our trusted pressure washing service. Fast, professional, and locally focused, we help Askern homeowners enjoy cleaner, safer outdoor spaces.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Patio pressure washing in Askern, Doncaster, removing moss, algae, and dirt from paving slabs to restore a clean, safe outdoor living area."
