--- a/local/pressure-washing-bawtry.html
+++ b/local/pressure-washing-bawtry.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Professional Pressure Washing Services in Bawtry</h1>
 <p>Maintaining the exterior of a property in Bawtry can be demanding without professional help. Driveways, patios, walls, and other outdoor surfaces are continually exposed to weather conditions, vehicle use, foot traffic, and natural growth. Over time, moss, algae, lichen, dirt, and stubborn staining begin to accumulate, leaving surfaces looking worn, slippery, and unsafe. Our professional pressure washing services are designed to remove this buildup efficiently, restoring cleanliness, safety, and visual appeal.</p>
 <p>We use commercial-grade pressure washing equipment alongside proven surface-specific techniques. Before starting any work, we carry out a full assessment to determine the correct pressure and cleaning method—whether the surface is block paving, concrete, tarmac, natural stone, or rendered walls. This careful approach ensures a thorough clean without damage. For both homeowners and businesses in Bawtry, pressure washing is an effective way to enhance kerb appeal, improve safety, and protect exterior surfaces from long-term wear.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing in Bawtry cleaning exterior surfaces and removing dirt, algae, and moss from residential properties."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
