--- a/local/pressure-washing-bentley.html
+++ b/local/pressure-washing-bentley.html
@@ -138,6 +138,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Your driveway is one of the first things people notice about your home, and over time it can become covered in moss, algae, oil stains, and ground-in dirt. Our professional driveway pressure washing service in Bentley, Doncaster is designed to bring tired, weather-stained surfaces back to life. Using high-powered, professional-grade equipment, we safely clean block paving, concrete, tarmac, and stone driveways without causing damage. Local properties in Bentley are especially prone to algae growth due to the damp climate, making regular pressure washing essential. We don’t just clean — we restore the appearance of your driveway, improving safety, kerb appeal, and overall property value.</p>
 <p>We tailor our driveway cleaning approach to suit your surface type, ensuring a deep clean while protecting the integrity of the materials. From stubborn tyre marks to slippery moss patches, our Bentley driveway pressure washing service delivers visible results in a single visit, leaving your entrance looking fresh, clean, and well-maintained.</p>
 <p>Whether you’re preparing to sell or simply want a cleaner home exterior, our driveway pressure washing in Bentley, Doncaster delivers fast, reliable results.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Freshly pressure washed driveway in Bentley, Doncaster, showing removal of moss, algae, oil stains, and built-up dirt for a clean, restored finish."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
