--- a/local/pressure-washing-bessacarr.html
+++ b/local/pressure-washing-bessacarr.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Professional Pressure Washing Services in Bessacarr</h1>
 <p>Pressure washing is one of the most effective ways to restore the appearance of outdoor surfaces and protect them from long-term damage. Over time, driveways, patios, and pathways collect dirt, algae, moss, oil stains, and general grime that standard cleaning methods cannot remove. Professional pressure washing uses powerful equipment combined with controlled water pressure to clean deep into the surface, lifting contaminants without causing erosion or surface wear. This results in a noticeably cleaner finish that instantly improves kerb appeal and helps maintain property value.</p>
 <p>Beyond visual benefits, pressure washing plays an important role in surface preservation and safety. Algae and moss can make paved areas extremely slippery, especially in shaded or damp conditions. Regular cleaning helps reduce these risks while also preventing organic growth from breaking down paving joints and surface coatings. When carried out correctly, pressure washing extends the lifespan of hard surfaces and keeps outdoor areas looking well cared for throughout the year.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing cleaning a driveway and patio in Bessacarr, removing dirt, moss, and algae."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
