--- a/local/pressure-washing-campsall.html
+++ b/local/pressure-washing-campsall.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Professional Pressure Washing Services in Campsall, Doncaster</h1>
 <p>Maintaining the exterior of a property in Campsall can be difficult, as outdoor surfaces are constantly exposed to weather conditions, pollution, and regular use. Over time, driveways, patios, walls, and decking can become discoloured with moss, algae, dirt, and general grime. These build-ups not only reduce visual appeal but can also create slippery, unsafe surfaces. Our professional pressure washing service is designed to restore cleanliness and improve safety across all exterior areas.</p>
 <p>Using advanced equipment and carefully controlled pressure, we clean surfaces thoroughly without causing damage. Every project begins with an assessment to identify the correct technique for each material, including block paving, concrete, stone, or render. For Campsall homeowners and businesses, pressure washing improves appearance, protects surfaces, and saves time compared to manual cleaning methods.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing service in Campsall, Doncaster cleaning outdoor surfaces and removing moss, algae, and grime from property exteriors."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
