--- a/local/pressure-washing-eggborough.html
+++ b/local/pressure-washing-eggborough.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Your driveway is one of the first things people notice about your home, and over time it can become stained with oil, algae, moss, and ground-in dirt. Our driveway pressure washing service in Eggborough Goole is designed to restore your surface safely and effectively, bringing back its original appearance. Using commercial-grade pressure washing equipment, we clean block paving, concrete, tarmac, and stone driveways without causing damage. Regular pressure washing not only improves kerb appeal but also helps prevent slippery surfaces that can become a safety risk.</p>
 <p>Homes across Eggborough Goole experience damp conditions that encourage moss and algae growth, particularly on shaded driveways. Our professional pressure washing process removes these contaminants at the root, not just the surface. We tailor water pressure and cleaning methods to suit your driveway material, ensuring a deep clean without erosion. Whether you’re preparing for a property sale or simply want your driveway looking its best, our local service delivers reliable, long-lasting results you can trust.</p>
 <p>Choosing a local driveway pressure washing specialist in Eggborough Goole means fast response times, honest pricing, and attention to detail. We take pride in helping homeowners maintain clean, well-presented outdoor spaces that add value to their property. With clear communication and proven results, our pressure washing service makes it easy to refresh your driveway with minimal disruption. One visit can dramatically improve the look of your home’s exterior.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Freshly cleaned block paving driveway after professional pressure washing in Eggborough Goole"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
