--- a/local/pressure-washing-norton.html
+++ b/local/pressure-washing-norton.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Over time, driveways in Norton, Doncaster naturally collect dirt, moss, algae, and oil stains that can make your property look tired and unsafe. Our professional driveway pressure washing service is designed to restore the clean, fresh appearance of your surface while improving grip and safety. Using commercial-grade equipment and surface-specific techniques, we safely clean block paving, concrete, tarmac, and stone driveways without causing damage. Whether your driveway is discoloured from traffic or slippery from organic growth, our pressure washing service delivers noticeable results that instantly lift your home’s kerb appeal.</p>
 <p>We understand that every driveway is different, which is why our Norton, Doncaster pressure washing service is tailored to suit your surface and condition. Before cleaning begins, we assess the driveway to determine the correct pressure and cleaning solution, ensuring a deep clean without erosion or joint damage. Our process removes embedded grime and weeds from between paving blocks, helping extend the lifespan of your driveway. Homeowners across Norton trust our service for reliable results, careful workmanship, and a finish that makes their property look well cared for.</p>
 <p>A freshly cleaned driveway creates a strong first impression and adds value to your home. Our local pressure washing team in Norton, Doncaster delivers consistent, high-quality results with minimal disruption. Whether you’re preparing for visitors or simply maintaining your property, our driveway pressure washing service offers a fast, effective solution you can rely on.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Clean block paved driveway after professional pressure washing in Norton, Doncaster"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
