--- a/local/pressure-washing-scawsby.html
+++ b/local/pressure-washing-scawsby.html
@@ -136,6 +136,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Pressure Washing Services in Scawsby</h1>
 <p>Outdoor surfaces around properties in Scawsby face constant exposure to rain, wind, vehicle traffic, and organic growth. Over time, dirt, moss, algae, lichen, and general staining accumulate on driveways, patios, walls, and other external areas. This not only affects the property's appearance but can also create slippery surfaces and contribute to long-term damage. Our pressure washing services in Scawsby remove this build-up efficiently, restoring surfaces to a cleaner, brighter state.</p>
 <p>We use professional-grade equipment and tailor our techniques for each surface type. Every area is assessed beforehand to ensure the right pressure levels, whether block paving, concrete, tarmac, natural stone, or other materials. This ensures deep, thorough cleaning without damage. For homeowners and businesses in Scawsby, pressure washing improves appearance, increases safety, and protects outdoor surfaces from premature wear.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing in Scawsby removing built-up dirt and algae from outdoor surfaces around a residential property"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
