--- a/local/pressure-washing-scawthorpe.html
+++ b/local/pressure-washing-scawthorpe.html
@@ -150,6 +150,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2>Driveway Cleaning and Pressure Washing in Scawthorpe</h2>
 <p>Your driveway is often the first thing visitors notice about your property, making it crucial to maintain both appearance and safety. In Scawthorpe, driveways frequently accumulate oil stains, tyre marks, mud, and moss, particularly in shaded or high-traffic areas. If left untreated, these surfaces can appear neglected, slip hazards may develop, and general wear may accelerate. Our professional driveway pressure washing service removes ingrained dirt, stubborn marks, and algae, leaving your driveway clean, inviting, and safe.</p>
 <p>We work with block paving, concrete, tarmac, and natural stone, adjusting water pressure and cleaning methods to match the material and prevent damage. Regular maintenance also reduces staining, weed growth, and moisture-related erosion, extending the lifespan of your driveway. Many Scawthorpe homeowners and business owners choose this service to enhance property value, maintain curb appeal, and keep entrances safe year-round. Our reliable, high-quality cleaning ensures driveways make a lasting impression on guests and clients alike.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Driveway pressure cleaning in Scawthorpe removing oil stains, tyre marks, moss, and ingrained dirt from block paving, concrete, and tarmac surfaces."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
