--- a/local/pressure-washing-selby.html
+++ b/local/pressure-washing-selby.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Pressure Washing Services Across Selby YO8</h1>
 <p>We provide professional pressure washing services across Selby YO8, helping homeowners and businesses keep their exterior surfaces clean, safe, and well maintained. Being based locally means we understand the common issues faced by properties in the Selby area, including algae growth, moss build-up, and stubborn dirt caused by damp weather conditions. Our service is suitable for a wide range of surfaces such as driveways, patios, paths, walls, and outdoor spaces, all cleaned using the correct pressure and techniques for long-lasting results. Whether your property is in the town centre or a nearby residential area, our pressure washing service is designed to restore surfaces without causing damage.</p>
 <p>We work throughout Selby and surrounding locations within the YO8 postcode, offering reliable appointments and consistent results. Our local knowledge allows us to tailor each clean to the surface type and environment, ensuring effective and professional exterior cleaning across the area.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing of a driveway and patio in Selby YO8, removing moss, algae, and dirt from residential property exterior surfaces"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
