--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Pressure Washing Services in Skellow</h1>
 <p>Outdoor surfaces around properties in Skellow are constantly exposed to changing weather conditions, vehicle traffic, and organic growth. Over time, this exposure causes dirt, algae, moss, lichen, and general staining to build up on driveways, patios, walls, and other exterior surfaces. This not only affects how a property looks but can also create slippery, unsafe areas and contribute to long-term surface deterioration if left untreated. Our pressure washing services in Skellow are designed to remove this build-up efficiently and safely, restoring surfaces to a cleaner, brighter condition.</p>
 <p>We use professional-grade pressure washing equipment combined with the correct cleaning techniques for each surface type. Before starting any work, surfaces are assessed to ensure the right pressure levels and methods are used, whether the area is block paving, concrete, tarmac, natural stone, or another material. This careful approach allows us to achieve deep, thorough cleaning results without causing damage. For homeowners and businesses in Skellow, pressure washing is a practical and cost-effective way to improve appearance, increase safety, and protect outdoor surfaces from premature wear.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing in Skellow removing built-up dirt and algae from outdoor surfaces around a residential property"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
