--- a/local/pressure-washing-sprotbrough.html
+++ b/local/pressure-washing-sprotbrough.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Driveway and Patio Cleaning Specialists Sprotbrough</h1>
 <p>Driveways and patios are among the most heavily used areas of any property in Sprotbrough, making them especially prone to stains and discolouration. Oil spills, tyre marks, food residue, and weathering can quickly leave surfaces looking tired and neglected. Our pressure washing service is tailored to suit different materials, ensuring effective cleaning without causing damage.</p>
 <p>By restoring the original appearance of your driveway or patio, pressure washing instantly improves kerb appeal and makes outdoor spaces more enjoyable. Clean surfaces also reduce the risk of slips and falls caused by algae and moss, creating a safer environment for family members and visitors. It’s a simple, affordable way to maintain your property and avoid costly repairs later on.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing in Sprotbrough cleaning driveways and patios to remove dirt moss and algae"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
