--- a/local/pressure-washing-armthorpe.html
+++ b/local/pressure-washing-armthorpe.html
@@ -159,7 +159,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>If your patio has lost its appeal, our Armthorpe pressure washing service offers a simple and effective solution. Enjoy a cleaner, safer outdoor space with professional results you can see immediately.</p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
 title="Patio and paving  pressure cleaning in Armthorpe Doncaster">
-professional pressure washing services
+professional patio and paving pressure washing.
 </a>FAQS</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Clean stone patio in Armthorpe after pressure washing removing algae and weather stains"
