--- a/local/pressure-washing-armthorpe.html
+++ b/local/pressure-washing-armthorpe.html
@@ -138,10 +138,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Your driveway is one of the first things people notice about your home, and over time it can become stained with oil, tyre marks, moss, and ingrained dirt. Our professional driveway pressure washing service in Armthorpe is designed to restore hard surfaces to a clean, safe, and attractive condition. Using specialist equipment and surface-appropriate techniques, we deep clean block paving, concrete, tarmac, and resin driveways without causing damage. Pressure washing not only improves appearance but also helps prevent slippery surfaces that can become hazardous in wet conditions. Homeowners across Armthorpe trust our reliable service to deliver consistent results that instantly lift kerb appeal and protect the long-term condition of their driveway.</p>
 <p>We tailor every driveway pressure washing job in Armthorpe to the specific surface and level of soiling. Our process removes weeds, algae, and built-up grime while preserving the integrity of joints and finishes. Where required, we can also advise on re-sand sealing for block paving to extend the results of your clean. With a strong focus on care, safety, and attention to detail, we provide a professional service that delivers visible results from the first visit.</p>
 <p>Whether your driveway needs a light refresh or a deep restorative clean, our Armthorpe pressure washing service delivers fast, effective results. Clean surfaces, improved safety, and a smarter exterior start with one professional visit.</p>
-<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+<P>
+ <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
 title="Driveway pressure washing in Armthorpe Doncaster">
-professional pressure washing services
-</a>FAQS</p>
+professional pressure washing services</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Freshly cleaned driveway in Armthorpe after professional pressure washing removing moss and surface stains"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -157,10 +157,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Patios are exposed to the elements all year round, making them a magnet for algae, moss, and ground-in dirt. Our patio pressure washing service in Armthorpe restores outdoor spaces to a clean, usable condition, perfect for relaxing or entertaining. We clean stone, concrete, paving slabs, and decorative surfaces using controlled pressure washing methods that lift contamination without harming the surface. Slippery green growth is completely removed, improving both safety and appearance. A professionally cleaned patio instantly transforms your garden, bringing colour and texture back to the surface while extending its lifespan. Homeowners in Armthorpe rely on our expertise to keep patios looking their best throughout the year.</p>
 <p>Every patio pressure washing job in Armthorpe is approached with care and precision. We assess the material, age, and condition of the surface before selecting the correct pressure and cleaning method. This ensures excellent results without etching or damage. Our service removes years of weathering, restoring your patio to a fresh, welcoming finish. Regular pressure washing also prevents long-term staining and surface deterioration, saving money on repairs or replacement.</p>
 <p>If your patio has lost its appeal, our Armthorpe pressure washing service offers a simple and effective solution. Enjoy a cleaner, safer outdoor space with professional results you can see immediately.</p>
-<a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
+<p>
+ <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
 title="Patio and paving  pressure cleaning in Armthorpe Doncaster">
-professional patio and paving pressure washing.
-</a>FAQS</p>
+professional patio and paving pressure washing. FAQS</P>
 <img src="/images/pressure-washing-patios.webp"
 alt="Clean stone patio in Armthorpe after pressure washing removing algae and weather stains"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -218,11 +218,6 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <!-- ✅ BOTTOM CALL BUTTON -->
 <div style="text-align:center; margin:40px 0;">
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
-</div>
-
-<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
-<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
-<img id="lightboxImg" src="" alt="">
 </div>
 
 
